DT-1492 fixes word wrap in nav folders on i.e.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -56,6 +56,12 @@
 }
 
 
+// Fixes wordwrap on ie issue
+.widget .extendednavigation ul li.folder .text,
+.widget .navigation ul li.folder .text {
+    -ms-word-break: break-word;
+}
+
 // Tablet Styles
 @media @tablet {
 
