--- a/stylesheet.less
+++ b/stylesheet.less
@@ -117,7 +117,6 @@ a,
 
 
 
-
 // ------------------------------
 //	2. #Buttons
 // ------------------------------
@@ -698,7 +697,7 @@ input[type="search"]::-webkit-search-decoration {
 		display: inline;
 	}
 	ul li a {
-		font-weight: 600;
+		font-size: @font-swatch5-font-size;
 	}
 	ul li {
 		padding-bottom: 5px;
